--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,11 @@
-
 nav {
     border-bottom: 1px solid black;
-    background-color:antiquewhite;
+    background-color: antiquewhite;
 
 }
 
 a:link {
-    color:darkslateblue;
+    color: darkslateblue;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -22,7 +21,13 @@ a:link {
     padding-left: 10px;
 }
 
-h1, h2, h3, h4, h5, h6, li {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li {
     font-family: 'Courier New', Courier, monospace;
     font-size: x-large;
 }
@@ -37,6 +42,9 @@ p {
 /*Styling of the responsive gallery*/
 div.gallery {
     border: 1px solid darkslategrey;
+    margin: 5px; 
+    float: left;
+    width: auto;
 }
 
 div.gallery:hover {
@@ -62,7 +70,7 @@ div.desc {
     float: left;
     width: 19.99999%;
 }
-
+/*
 @media only screen and (max-width: 700px) {
     .responsive {
         width: 49.99999%;
@@ -70,11 +78,20 @@ div.desc {
     }
 }
 
-    
+@media only screen and (max-width: 500px) {
     .responsive {
-        width: 100%;}
-    .clearfix:after {
+        width: 100%;
+    }
+}
+
+.responsive {
+    width: 100%;
+}
+
+.clearfix:after {
     content: "";
     display: table;
     clear: both;
 }
+
+*/
