--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,14 +41,14 @@ p {
 
 /*Styling of the responsive gallery*/
 div.gallery {
-    border: 1px solid darkslategrey;
-    margin: 5px; 
+    border: 2px solid darkslategrey;
+    margin: 5px;
     float: left;
     width: auto;
 }
 
 div.gallery:hover {
-    border: 1px solid slateblue;
+    border: 3px solid slateblue;
 }
 
 div.gallery img {
@@ -61,6 +61,11 @@ div.desc {
     text-align: center;
 }
 
+div.desc:hover {
+    color: slateblue;
+    font-size:1.3rem
+}
+
 * {
     box-sizing: border-box;
 }
@@ -70,6 +75,7 @@ div.desc {
     float: left;
     width: 19.99999%;
 }
+
 /*
 @media only screen and (max-width: 700px) {
     .responsive {
