--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ div.desc:hover {
 }
 
 .bg-extra {
-    background-image: url("./assets/images/extraread-background.jpg");
+    background-image: url("../images/extraread-background.jpg");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
