--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,23 @@
 nav {
-    border-bottom: 1px solid black;
-    background-color: antiquewhite;
-
+  border-bottom: 1px solid black;
+  background-color: antiquewhite;
 }
 
 a:link {
-    color: darkslateblue;
-    font-family: 'Courier New', Courier, monospace;
+  color: darkslateblue;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .nav-list {
-    list-style-type: none;
-    padding-left: 3;
-    padding-top: 10px;
-    color: antiquewhite;
+  list-style-type: none;
+  padding-left: 3;
+  padding-top: 10px;
+  color: antiquewhite;
 }
 
 .nav-list-item {
-    display: inline-block;
-    padding-left: 10px;
+  display: inline-block;
+  padding-left: 10px;
 }
 
 h1,
@@ -28,67 +27,71 @@ h4,
 h5,
 h6,
 li {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: x-large;
+  font-family: "Courier New", Courier, monospace;
+  font-size: x-large;
 }
 
 p {
-    text-align: justify;
-    text-justify: inter-word;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: larger;
+  text-align: justify;
+  text-justify: inter-word;
+  font-family: "Courier New", Courier, monospace;
+  font-size: larger;
 }
+
+img.icon:hover {
+  width: 300px;  
+}
+
+
 
 /*Styling of the responsive gallery*/
 div.gallery {
-    border: 2px solid darkslategrey;
-    margin: 5px;
-    float: left;
-    width: auto;
+  border: 2px solid darkslategrey;
+  margin: 5px;
+  float: left;
+  width: auto;
 }
 
 div.gallery:hover {
-    border: 3px solid slateblue;
+  border: 3px solid slateblue;
 }
 
 div.gallery img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 div.desc {
-    padding: 15px;
-    text-align: center;
+  padding: 15px;
+  text-align: center;
 }
 
 div.desc:hover {
-    color: slateblue;
-    font-size:1.3rem
+  color: slateblue;
+  font-size: 1.3rem;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .responsive {
-    padding: 0 6px;
-    float: left;
-    width: 19.99999%;
+  padding: 0 6px;
+  float: left;
+  width: 19.99999%;
 }
 
 .bg-extra {
-    background-image: url("../images/extraread-background.jpg");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../images/extraread-background.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .extra-story-title {
-    color: brown;
-    background-color:antiquewhite;
-    font-size:x-large;
-
-
+  color: brown;
+  background-color: antiquewhite;
+  font-size: x-large;
 }
 /*
 @media only screen and (max-width: 700px) {
