--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,120 +1,72 @@
+html, body {
+    background-color:beige;
+}
+
 nav {
-  border-bottom: 1px solid black;
-  background-color: antiquewhite;
+    background-color:beige;
+
 }
 
 a:link {
-  color: darkslateblue;
-  font-family: "Courier New", Courier, monospace;
+    color:darkslateblue;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .nav-list {
-  list-style-type: none;
-  padding-left: 3;
-  padding-top: 10px;
-  color: antiquewhite;
-}
+    list-style-type: none;
+    padding-left: 3px;
+    padding-top: 10px;
+    }
 
 .nav-list-item {
-  display: inline-block;
-  padding-left: 10px;
+    display: inline-block;
+    padding-left: 10px;
+    color: antiquewhite;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li {
-  font-family: "Courier New", Courier, monospace;
-  font-size: x-large;
+h1, h2, h3, h4, h5, h6, li {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
 }
 
 p {
-  text-align: justify;
-  text-justify: inter-word;
-  font-family: "Courier New", Courier, monospace;
-  font-size: larger;
+    text-align: justify;
+    text-justify: inter-word;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: larger;
 }
 
-img.icon:hover {
-  width: 300px;  
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-
-
-/*Styling of the responsive gallery*/
-div.gallery {
-  border: 2px solid darkslategrey;
-  margin: 5px;
-  float: left;
-  width: auto;
+html, body {
+    height: 100%;
 }
 
-div.gallery:hover {
-  border: 3px solid slateblue;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
-
-div.desc:hover {
-  color: slateblue;
-  font-size: 1.3rem;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 19.99999%;
+.head-extra {
+    background-color:blanchedalmond;
+    position:fixed;
+    left: 0;
+    top: 0;
+    text-align: left;
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: darkslategrey;
+    margin-top: 10px;
 }
 
 .bg-extra {
-  background-image: url("../images/extraread-background.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.extra-story-title {
-  color: brown;
-  background-color: antiquewhite;
-  font-size: x-large;
-}
-/*
-@media only screen and (max-width: 700px) {
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
+    background-image: url("../images/extraread-background.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-@media only screen and (max-width: 500px) {
-    .responsive {
-        width: 100%;
-    }
-}
 
-.responsive {
-    width: 100%;
-}
 
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-*/
